# YT_Demos

./: README.md
MyAdBlock/: background.js  manifest.json
VulnerableApps/mongodb-injection-demo-books/: Dockerfile  app.py  config.py  docker-compose.yml  populate_db.py  readme.md
VulnerableApps/mongodb-injection-demo-books/templates/: index.html
YT-AI_Agent/: README.md  normal_http_request.txt  pyproject.toml
YT-AI_Agent/outputs/: create_jwt_none_attack_vector_task.txt  execute_jwt_none_attack_vector_task.txt
YT-AI_Agent/src/myhacker/: crew.py  main.py
YT-AI_Agent/src/myhacker/config/: agents.yaml  tasks.yaml
YT-AI_Agent/src/myhacker/tools/: jwt_manipulater.py  requester.py
YT-PhishingScenario/: landing.py  mail.html
YT-PhishingScenario/templates/: dashboard.html  login.html
search-engine/: go.mod  index.html  results.html  search_engine.go
search-engine/index-db/: amd.txt  aziz_sancar.txt  aziz_sancar_makaleleri.txt  bilgisayar_nasil_calisir.txt  borsa.txt  en_iyi_hisse_senetleri.txt  en_iyi_islemciler.txt  golang_nedir.txt  intel.txt
