[project]
name = "myhacker"
version = "0.1.0"
description = "myhacker using crewAI"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai==0.86.0",
    "crewai-tools==0.17.0",
    "langchain_google_genai==2.0.9"
]

[project.scripts]
myhacker = "myhacker.main:run"
run_crew = "myhacker.main:run"  

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
